<?xml version="1.0"?>
<package format="3">
  <name>ros2_aeva_publisher</name>
  <version>0.0.1</version>
  <description>Aeva LiDAR ROS2 publisher</description>
  <maintainer email="yechoi@sierrabase.co.kr">Yeongeun Choi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
