<?xml version="1.0"?>
<package format="3">
  <name>ros2_aeva_publisher</name>
  <version>0.0.1</version>
  <description>Aeva LiDAR ROS2 publisher</description>
  <maintainer email="yechoi@sierrabase.co.kr">Yeongeun Choi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_geometry_msgs</depend>\

  <exec_depend>libpcl-dev</exec_depend>
  <build_depend>libpcl-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
